# PyScienceMode2

./: .gitignore  CMakeLists.txt  CMakeListsa.txt  PyScienceMode2_linux.i.in  README.md  ScienceMode2.cpp  cmake_install.cmake  generate.sh  install_manifest.txt  serialport.h
